--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "lint:fix": "prettier --write . && eslint . --fix",
     "release": "zotero-plugin release",
     "test": "zotero-plugin test",
-    "update-deps": "npm update --save"
+    "update-deps": "npm update --save",
+    "bump": "node bump-version.js"
   },
   "dependencies": {
     "zotero-plugin-toolkit": "^5.1.0-beta.13"
